--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --port 8081",
     "build": "vue-cli-service build",
+    "start": "start http://localhost:8081 && npm run serve",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
